--- a/Code Goblins/Code Goblins.csproj
+++ b/Code Goblins/Code Goblins.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exit.cs" />
+    <Compile Include="MapRepository.cs" />
+    <Compile Include="PlayerRepository.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
