Basic viewing and room objects added.

--- a/Code Goblins/Code Goblins.csproj
+++ b/Code Goblins/Code Goblins.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Block.cs" />
     <Compile Include="Exit.cs" />
     <Compile Include="MapRepository.cs" />
     <Compile Include="PlayerRepository.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="ProgramUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="View.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
