Demo Update. Added to do list

--- a/Code Goblins/Code Goblins.csproj
+++ b/Code Goblins/Code Goblins.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WallBlock.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="Exit.cs" />
     <Compile Include="MapRepository.cs" />
@@ -55,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="To Do.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
