RIP mapRepo mega-responsibility

--- a/Code Goblins/Code Goblins.csproj
+++ b/Code Goblins/Code Goblins.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RoomRepository.cs" />
     <Compile Include="WallBlock.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="Exit.cs" />
